2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Declare i at top of db_pager_process

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/yelp-main.c:
	* src/yelp-window.c:
	- Using gtk_window_set_default_icon_name
	- Using GtkAboutDialog

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* data/yelp.schemas.in:
	- Forgot to add this to CVS

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-man-parser.c:
	- Small fix for TP tag from Don Scorgie

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Patch from Don Scorgie to make Copy work.  Yay!

2004-10-18  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	- Minor changes

	* data/default.css:
	- Some CSS changes

	* data/Makefile.am:
	* data/ui/yelp-ui.xml:
	* data/ui/yelp.glade:
	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	- Added font preference and all the Gecko wonder that goes with
	- Moved theme stuff to settings

	* src/yelp-man-pager.c:
	* src/yelp-toc-pager.c:
	* src/yelp-window.c:
	- Moved theme stuff to settings

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-utils.c:
	- Changed debug statements to use g_print

2004-10-12  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp-ui.xml:
	* src/yelp-window.c:
	- Added Copy, breaking Copy
	- DND from the tree view

	* src/Makefile.am:
	* src/yelp-cache.h:
	- Removed yelp-uri

	* src/test-uri.c:
	* src/yelp-base.c:
	* src/yelp-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	- Privatized YelpDocInfo
	- Added multiple URI support to YelpDocInfo

2004-10-10  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp.glade:
	* src/yelp-window.c:
	- Open Location dialog

2004-10-10  Shaun McCance  <shaunm@gnome.org>
